--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-resizable": "^3.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
